fix post width overflow

--- a/post/post-detail.style.css
+++ b/post/post-detail.style.css
@@ -28,8 +28,7 @@
 .post {
   display: flex;
   flex-direction: column;
-  max-width: calc(100% - 16rem);
-  width: 100%;
+  width: calc(100% - 16rem);
   align-items: center;
 }
 
